[tool.poetry]
name = "captive-auto-login"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyring = "^25.5.0"
keyrings-osx-keychain-keys = "^1.0.1"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
